--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "paste",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "http://dump.pages.dev/public",
   "dependencies": {
     "@monaco-editor/react": "^4.3.1",
     "@testing-library/jest-dom": "^5.11.4",
